Fixes for note title spacing

--- a/src/components/Note/Note.scss
+++ b/src/components/Note/Note.scss
@@ -4,8 +4,8 @@
   position: relative;
 
   .delete-button {
-    position: absolute;
-    top: 2rem;
     left: -2rem;
+    position: absolute;
+    top: 3rem;
   }
 }
